# hit-clip

./: .gitignore  README.md  package.json  tsconfig.json  vite.config.ts
client/: .gitignore  README.md  package.json  splashscreen.html  vite.config.ts.timestamp-1661599727185.mjs
client/src/: App.tsx  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: main.rs
client/src/apis/: audio.ts  req_path.ts  video.ts
client/src/constants/: common.ts
client/src/layouts/: Index.tsx
client/src/routers/: index.tsx
client/src/styles/: common.less
client/src/types/: audio.ts
client/src/utils/: request.ts
service/: .gitignore  Cargo.toml  README.md
service/src/: main.rs
service/src/ffmpeg/: audio.rs  mod.rs  objects.rs  video.rs
service/src/lib/: hello.rs
service/src/spider/: audio.rs  mod.rs  objects.rs
service/src/synthesis/: audio.rs  objects.rs
service/src/util/: file.rs
service/synthesis/: history.txt  languages and voices.txt  readme.eng.txt  readme.rus.txt
src/: App.module.less  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf copy.json  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: audio.rs  ffmpeg.rs  mod.rs  video.rs
src/apis/: audio.ts  req_path.ts  spider_audio.ts  video.ts
src/assets/: wx_video.jfif
src/backend_calls/: audio.ts  calls.ts  common.ts  video.ts
src/constants/: audio.ts  common.ts
src/layouts/: Index.module.less  Index.tsx
src/routers/: index.tsx
src/types/: audio.ts  common.ts  synthesis.ts  video.ts
src/utils/: common.ts  file.ts  request.ts  video.ts
(+78 files in other folders)
